Bug 1820434: Isolate AsyncInputStream from InputToReadableStream for workers r=asuth

nsIAsyncInputStreams keep a reference to the callback object, causing
possible leaks which will result in assertions in workers.  Also use a
StrongWorkerRef to ensure the worker remains around until the
OnInputStreamReady callback occurs.

Differential Revision: https://phabricator.services.mozilla.com/D171810